Fixed the footer logo for both compare.html and githubbadges.html (#1333)
* fixed logo image of compare and githubbadge

* fixed githubbadge.html footer logo

* fixed the footer logo for compare.html and githubbadge.html

* removed preloader

* footer fixes will make change to blog in next PR

--- a/pages/githubbadge.html
+++ b/pages/githubbadge.html
@@ -18,15 +18,15 @@
         }
 
         .container {
-    max-width: 1200px;
-    margin: auto;
-    padding: 20px;
+        max-width: 1200px;
+        margin: auto;
+        padding: 20px;
     /* background: #fff; */
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    overflow-x: auto; /* Enable horizontal scrolling */
-    -webkit-overflow-scrolling: touch; /* Smooth scrolling for iOS */
-}
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        overflow-x: auto; /* Enable horizontal scrolling */
+        -webkit-overflow-scrolling: touch; /* Smooth scrolling for iOS */
+        }
 
         h1,
         h2 {
@@ -250,6 +250,14 @@
             width: 0%; 
             background: white;
             transition: width 0.2s ease; 
+        }
+        .footer-logo {
+        width: auto;
+        height: 73px;
+        cursor: pointer;
+        padding-left: 20px;
+        padding-top: 40px;
+        object-fit: scale-down; /* Ensure the aspect ratio is maintained */
         }
     </style>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
