--- a/login.html
+++ b/login.html
@@ -16,11 +16,11 @@
             <h2 class="title">Sign in</h2>
             <div class="input-field">
               <i class="fas fa-user"></i>
-              <input type="text" placeholder="Username" required />
+              <input type="text" placeholder="Username" />
             </div>
             <div class="input-field">
               <i class="fas fa-lock toggle-password" id="toggle-password"></i>
-              <input type="password" id="password-input" placeholder="Password" required />
+              <input type="password" id="password-input" placeholder="Password" required/>
             </div>
             <div class="remember-me">
               <input type="checkbox" id="remember-me" />
@@ -30,16 +30,16 @@
             <p class="social-text">Or Sign in with social platforms</p>
             <div class="social-media">
               <button type="button" class="github-login" id="gh-lg-btn">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub" width="40" height="40" style="margin-left: 5px;">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub" width="40" height="40">
               </button>
             </div>
           </form>
-          
+
           <form action="#" class="sign-up-form">
             <h2 class="title">Sign up</h2>
             <div class="input-field">
               <i class="fas fa-user"></i>
-              <input type="text" placeholder="Username" required />
+              <input type="text" placeholder="Username" />
             </div>
             <div class="input-field">
               <i class="fas fa-code-branch"></i>
@@ -47,11 +47,11 @@
             </div>
             <div class="input-field">
               <i class="fas fa-envelope"></i>
-              <input type="email" placeholder="Email" required />
+              <input type="email" placeholder="Email" />
             </div>
             <div class="input-field">
               <i class="fas fa-lock toggle-password" id="toggle-password-signup"></i>
-              <input type="password" id="password-input-signup" placeholder="Password" minlength="8" required />
+              <input type="password" id="password-input-signup" placeholder="Password" minlength="8" />
             </div>
             <div class="remember-me">
               <input type="checkbox" id="remember-me-signup" />
@@ -61,7 +61,7 @@
             <p class="social-text">Or Sign up with social platforms</p>
             <div class="social-media">
               <button type="button" class="github-login" id="gh-sg-btn">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub" width="40" height="40" style="margin-left: 5px;">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub" width="40" height="40">
               </button>
             </div>
           </form>
@@ -71,23 +71,27 @@
       <div class="panels-container">
         <a href="index.html" class="homeBtn">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 20" width="30" height="30">
-            <path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z" />
+            <path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z" fill="#000000"/>
           </svg>
         </a>
         <div class="panel left-panel">
           <div class="content">
-            <h3>New here?</h3>
+            <h3>New here ?</h3>
             <p>
-              Discover new experiences and profiles with awesome-github-profiles. Get access to exclusive content and features. Create your account.
+              Discover new experiences and profiles with awesome-github-profiles<br>
+              Get access to exclusive content and features.<br>
+              Create your account.
             </p>
             <button class="btn transparent" id="sign-up-btn">
               Sign up
             </button>
           </div>
+          <img src="img/log.svg" class="image" alt="" />
         </div>
+        
         <div class="panel right-panel">
           <div class="content">
-            <h3>One of us?</h3>
+            <h3>One of us ?</h3>
             <p>
               Welcome to our community
             </p>
@@ -99,24 +103,6 @@
         </div>
       </div>
     </div>
-
     <script src="login.js"></script>
-    <script>
-      document.getElementById('toggle-password').addEventListener('click', function () {
-        const passwordInput = document.getElementById('password-input');
-        const type = passwordInput.getAttribute('type') === 'password' ? 'text' : 'password';
-        passwordInput.setAttribute('type', type);
-        this.classList.toggle('fa-eye');
-        this.classList.toggle('fa-eye-slash');
-      });
-
-      document.getElementById('toggle-password-signup').addEventListener('click', function () {
-        const passwordInput = document.getElementById('password-input-signup');
-        const type = passwordInput.getAttribute('type') === 'password' ? 'text' : 'password';
-        passwordInput.setAttribute('type', type);
-        this.classList.toggle('fa-eye');
-        this.classList.toggle('fa-eye-slash');
-      });
-    </script>
   </body>
 </html>
