--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Register & Login</title>
+    <title>GitHub Login</title>
     <link rel="shortcut icon" href="assets/recode-hive.png" type="image/x-icon">
     <link rel="stylesheet" href="login.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
@@ -12,59 +12,15 @@
     <div class="container">
       <div class="forms-container">
         <div class="signin-signup">
-          <form action="#" class="sign-in-form">
-            <h2 class="title">Sign in</h2>
-            <div class="input-field">
-              <i class="fas fa-user"></i>
-              <input type="text" placeholder="Username" />
-            </div>
-            <div class="input-field">
-              <i class="fas fa-lock toggle-password" id="toggle-password"></i>
-              <input type="password" id="password-input" placeholder="Password" required/>
-            </div>
-            <div class="remember-me">
-              <input type="checkbox" id="remember-me" />
-              <label for="remember-me">Remember Me</label>
-            </div>
-            <input type="submit" value="Login" class="btn solid" />
-            <p class="social-text">Or Sign in with social platforms</p>
+          <div class="auth-form">
+            <h2 class="title">Welcome to Awesome GitHub Profiles</h2>
+            <p class="auth-text">Sign in with your GitHub account to continue</p>
             <div class="social-media">
-              <button type="button" class="github-login" id="gh-lg-btn">
+              <button type="button" class="github-login" id="gh-auth-btn">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub" width="40" height="40" style="margin-left: 5px;">
               </button>
             </div>
-          </form>
-          
-          <form action="#" class="sign-up-form">
-            <h2 class="title">Sign up</h2>
-            <div class="input-field">
-              <i class="fas fa-user"></i>
-              <input type="text" placeholder="Username" />
-            </div>
-            <div class="input-field">
-              <i class="fas fa-code-branch"></i>
-              <input type="text" placeholder="Git Username" />
-            </div>
-            <div class="input-field">
-              <i class="fas fa-envelope"></i>
-              <input type="email" placeholder="Email" />
-            </div>
-            <div class="input-field">
-              <i class="fas fa-lock toggle-password" id="toggle-password"></i>
-              <input type="password" id="password-input" placeholder="Password" minlength="8" />
-            </div>
-            <div class="remember-me">
-              <input type="checkbox" id="remember-me" />
-              <label for="remember-me">Remember Me</label>
-            </div>
-            <input type="submit" class="btn" value="Sign up" />
-            <p class="social-text">Or Sign up with social platforms</p>
-            <div class="social-media">
-              <button type="button" class="github-login" id="gh-sg-btn">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub" width="40" height="40" style="margin-left: 5px;">
-              </button>
-            </div>
-          </form>
+          </div>
         </div>
       </div>
 
@@ -76,27 +32,16 @@
         </a>
         <div class="panel left-panel">
           <div class="content">
-            <h3>New here ?</h3>
+            <h1>Join Our Community</h1>
+            <br>
             <p>
-              Discover new experiences and profiles with awesome-github-profiles <br>Get access to exclusive content and features. <br> Create your account.
+              Discover new experiences and profiles with awesome-github-profiles<br>
+              Get access to exclusive content and features.<br>
+              <br>
+              Connect with your GitHub account to begin.
             </p>
-            <button class="btn transparent" id="sign-up-btn">
-              Sign up
-            </button>
           </div>
           <img src="img/log.svg" class="image" alt="" />
-        </div>
-        <div class="panel right-panel">
-          <div class="content">
-            <h3>One of us ?</h3>
-            <p>
-              Welcome to our community
-            </p>
-            <button class="btn transparent" id="sign-in-btn">
-              Sign in
-            </button>
-          </div>
-          <img src="img/register.svg" class="image" alt="" />
         </div>
       </div>
     </div>
