Updated animation in Navbar (#1346)
I have updated navbar using GSAP
now it is looking good
see and merge now

--- a/index.html
+++ b/index.html
@@ -341,7 +341,11 @@
     </div>
   </div>
 
+<!-- GSAP ANIMATION SCRIPT -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
+<!-- GSAP CODE FILE  -->
+ <script src="index.js"></script>
 
   <script src="scripts/profileModal.js"></script>
 
